Re #61: Added test of what happens with corrupt files
-we will probably need to do something to generalize this, in the future